--- a/styles/style.css
+++ b/styles/style.css
@@ -128,7 +128,7 @@ pre {
 }
 
 code {
-  background-color: #e1e1e164;
+  /* background-color: #e1e1e164; */
   padding: 2px 4px;
   border-radius: 4px;
   font-family: monospace;
