--- a/styles/style2(sandbox).css
+++ b/styles/style2(sandbox).css
@@ -1,88 +1,68 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --index: calc(1vw + 1vh);
+}
+
 html {
-  /*background-color: #a9a9a9;*/
   background: url(../pattern.png);
 }
 
 body {
-  width: 90%;
+  background-color: #ccd0cf;
   margin: 0 auto;
-  background-color: #ffffff;
-  color: #333;
-  font: 1.2em / 1.2 Arial, Helvetica, sans-serif;
-  max-width: 2000px;
+  width: calc(var(--index) * 50);
+  /* width: 90%; */
+  /* position: absolute; */
+  /* left: 11vw; */
 }
 
 .main-header-top {
-  max-width: 2000px;
-  background-color: #000;
-  padding: .5em;
-  height: 26px;
+  background-color: black;
   display: flex;
   align-items: center;
+  height: calc(var(--index) * 2);
+  font: 1.2em / 1.2 monospace, sans-serif;
+}
+
+.header-logo img {
+  width: calc(var(--index) * 1);
 }
 
 .main-header-top ul {
-  padding: 0;
   list-style-type: none;
   flex: 2;
   display: flex;
-  
 }
 
 .main-header-top li {
   display: inline;
+  /* margin-left: 20px; */
+  
 }
 
 .main-header-top a {
   color: #fff;
   text-decoration: none;
-  padding: .5em 1em;
-
+  padding: 1.2em 2em;
 }
 
 .main-header-top a:hover {
-  background-color: #bbb6b065;
-}
-
-.header-logo img {
-  width: 30px;
-  height: 30px;
-  padding-left: 200px;
+  background-color: #11212d9f;
+  color:#9BA8AB;
 }
 
 main {
-  max-width: 1300px;
-  margin: 10px auto;
-  background-color: #eae6e365;
-  padding: 0 20px 20px 20px;
-  border: 2px solid #bbb6b0ec;
+  padding: 1.2em 2em;
+  font-size: 1.3em;
   display: block;
-}
-
-nav {
-  float: left;
- 
-}
-
-nav a {
-  text-decoration: none;
-  color: #000;
-  line-height: 3;
-  border: 1px solid black;
-  display: block;
-  width: 150px;
-  height: 50px;
-  margin: .9em;
-}
-
-nav a:hover {
-  background: #bbb6b065;
-  color: white;
-}
-
-nav ul {
-  list-style-type: none;
-  text-align: center; 
+  /* font-size: calc(var(--index) * 0.6); */
+  /* width: calc(var(--index) * 45); */
+  /* margin: 0 auto; */
 }
 
 p {
@@ -103,7 +83,6 @@ pre {
 }
 
 code {
-  /* background-color: #e1e1e164; */
   padding: 2px 4px;
   border-radius: 4px;
   font-family: monospace;
@@ -117,30 +96,14 @@ code {
   list-style-type: none;
 }
 
-.iframe-code {
+/* .iframe-code {
   width: 500px;
   height: 200px;
   box-shadow: 5px 5px 5px #444;
-}
+} */
 
 footer {
   padding: 1%;
   margin-top: 10px;
   border-top: 3px solid #bbb6b065;
 }
-
-.youtube-iframe {
-  float: left;
-  margin: 0 10px 5px 10px;
-  max-width: 100%;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-li{
-  line-height: 1.4; 
-}
-
