--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,34 @@
+
+@font-face {
+  font-weight: 100;
+  font-family: Roboto;
+  src: url(../fonts/Roboto-Thin.ttf);
+}
+
+@font-face {
+  font-weight: 100;
+  font-family: Roboto;
+  src: url(../fonts/Roboto-ThinItalic.ttf);
+}
+
+@font-face {
+  font-weight: 400;
+  font-family: Roboto;
+  src: url(../fonts/Roboto-Regular.ttf);
+}
+
+@font-face {
+  font-weight: 700;
+  font-family: Roboto;
+  src: url(../fonts/Roboto-Bold.ttf);
+}
+
+/* @font-face {
+  font-weight: 700;
+  font-family: Roboto;
+  src: url(../fonts/Roboto-BoldItalic.ttf);
+} */
+
 html {
   /*background-color: #a9a9a9;*/
   background: url(../pattern.png);
@@ -8,7 +39,9 @@ body {
   margin: 0 auto;
   background-color: #ffffff;
   color: #333;
-  font: 1.2em / 1.2 Arial, Helvetica, sans-serif;
+  font-family: Roboto, sans-serif;
+  font-size: 1.3rem;
+  /* font: 1.2em / 1.2 Arial, Helvetica, sans-serif; */
   /*min-width: 1000px;*/
   max-width: 2000px;
 }
@@ -97,7 +130,7 @@ nav ul {
 
 p {
   text-indent: 20px;
-  line-height: 1.5;
+  line-height: 1.4;
 }
 
 h1, h3 {
