--- a/styles/style2(sandbox).css
+++ b/styles/style2(sandbox).css
@@ -56,10 +56,15 @@ body {
   color:#9BA8AB;
 }
 
-main {
+.flex-container {
   padding: 0.5em 0.5em;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  flex: 1;
+  text-align: justify;
   /* font-size: 1.3em; */
-  display: block;
+  /* display: block; */
   /* font-size: calc(var(--index) * 0.6); */
   /* width: calc(var(--index) * 45); */
   /* margin: 0 auto; */
