--- a/styles/prism.css
+++ b/styles/prism.css
@@ -12,7 +12,7 @@ pre[class*="language-"] {
   /* word-spacing: normal; */
   /* word-break: normal; */
   /* word-wrap: normal; */
-  line-height: 1.5;
+  /* line-height: 1.5; */
   /* -moz-tab-size: 4; */
   /* -o-tab-size: 4; */
   /* tab-size: 4; */
@@ -42,9 +42,9 @@ pre[class*="language-"]::selection {
   }
 }
 pre[class*="language-"] {
-  padding: 1em;
+  /* padding: 1em; */
   margin: 0.5em 0;
-  overflow: auto;
+  /* overflow: auto; */
 }
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
