--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ body {
   font-size: 1.2rem;
   /* font: 1.2em / 1.2 Arial, Helvetica, sans-serif; */
   /*min-width: 1000px;*/
-  max-width: 2000px;
+  /* max-width: 2000px; */
 }
 
 .logo {
@@ -56,7 +56,7 @@ body {
 
 
 .main-header-top {
-  max-width: 2000px;
+  /* max-width: 2000px; */
   background-color: #000;
   padding: .5em;
   height: 26px;
@@ -90,7 +90,7 @@ body {
 .header-logo img {
   width: 30px;
   height: 30px;
-  padding-left: 200px;
+  /* padding-left: 200px; */
 }
 
 main {
@@ -176,7 +176,7 @@ code {
 }
 
 .iframe-code {
-  width: 500px;
+  width: 400px;
   height: 200px;
   box-shadow: 5px 5px 5px #444;
   /*
@@ -206,3 +206,56 @@ li{
   line-height: 1.7; 
 }
 
+@media (max-width: 550px) {
+  body {
+    width: 100%;
+  }
+
+  main {
+    min-height: 57vh;
+  }
+
+  .logo {
+    font-size: 90%;
+    text-align: center;
+  }
+
+  .iframe-code {
+    width: 350px;
+  }
+
+  footer {
+    text-align: center;
+  }
+
+  pre {
+    background-color: #e1e1e1b3;
+    padding: 10px;
+    border-radius: 4px;
+    display: block;
+    /* text-wrap: wrap; */
+    /* overflow-wrap: break-word; */
+    
+    overflow: auto;
+  }
+  
+  code {
+    /* background-color: #e1e1e16d; */
+    padding: 2px 4px;
+    border-radius: 4px;
+    font-family: monospace;
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 1920px) {
+  .header-logo img {
+    padding-left: 200px;
+  }
+}
+
+@media (min-width: 2560px) {
+  .header-logo img {
+    padding-left: 500px;
+  }
+}
