--- a/styles/style2(sandbox3).css
+++ b/styles/style2(sandbox3).css
@@ -8,72 +8,46 @@
   --gray70: hsl(0, 0%, 70%);
   --gray90: hsl(0, 0%, 90%);
   --accent: hsl(153, 71%, 59%);
-  
+  --bs-yellow: #ffc107;
+  --bs-blue: #0d6efd;
 }
 
 html {
   box-sizing: border-box;
-  font-size: 100%;
+  display: block;
   /* background: url(../pattern.png); */
-  
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0 auto;
-  width: 80%;
-  height: 100vh;
+  background-color: black;
+  color: white;
+  font-family: monospace;
+  overflow-y: scroll;
+  scrollbar-color: rgb(28, 29, 33) rgb(54, 55, 61);
+  scrollbar-width: thin;
+  text-align: start;
+  text-size-adjust: 100%;
 }
 
-header {
-  background: var(--gray50);
-  height: 100px;
+.left-menu {
+  position: fixed;
+  top: 0px;
+  width: 260px;
+  z-index: 10;
+  border: 2px solid var(--accent);
+}
+
+.logo {
+  height: 75px;
   text-align: center;
-  margin-bottom: 5px;
-  border: 2px solid rgb(101, 215, 101);
 }
 
-footer {
-  background: var(--gray50);
-  height: 100px;
-  text-align: center;
-  border: 2px solid rgb(102, 217, 102);
-  margin-top: 5px;
-}
-
-.container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  border: 2px solid var(--gray30);
-}
-
-.box {
-  background: rgb(141, 179, 179);
-  border: 2px solid black;
-  padding: 2px;
-  margin: 2px;
-}
-
-.box-nav-left {
-  flex: 1 200px
-}
-
-.box-content {
-  flex: 3 200px;
-}
-
-.box-nav-right {
-  flex: 1 200px
-}
-
-@media (max-width: 550px) {
-  body {
-    width: 100%;
-  }
+.left-menu-content-wrapper {
+  max-height: 100%;
+  max-width: 100%;
+  border: 2px solid var(--bs-blue);
 }
