--- a/styles/style.css
+++ b/styles/style.css
@@ -206,6 +206,22 @@ li{
   line-height: 1.7; 
 }
 
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+table, th, td {
+  border: 1px solid #ddd;
+}
+th, td {
+  padding: 10px;
+  text-align: left;
+}
+th {
+  background-color: #f2f2f2;
+}
+
 @media (max-width: 550px) {
   body {
     width: 100%;
