--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@ body {
 }
 
 main {
-  max-width: 1300px;
+  max-width: 1100px;
   margin: 10px auto;
   background-color:whitesmoke;
   /* старый вариант: */
@@ -119,7 +119,6 @@ main {
 
 nav {
   float: left;
- 
 }
 
 nav a {
@@ -250,6 +249,55 @@ th {
   border-bottom: 1px solid black;
 }
 
+.sidebar {
+  width: 300px;
+  padding: 15px;
+  margin: 10px;
+  right: 353px;
+  position: fixed;
+  overflow-y: auto;
+  background-color: #f4f4f4;
+  border: 2px solid #bbb6b0ec;
+}
+
+.sidebar h2 {
+  font-size: 18px;
+}
+
+.sidebar a {
+  font-size: 13px;
+}
+
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.sidebar ul li {
+  margin-bottom: 10px;
+}
+
+.sidebar ul li a {
+  text-decoration: none;
+  color: #333;
+}
+
+.sidebar ul li a:hover {
+  color: #007bff;
+}
+.sidebar ul li a.active {
+  font-weight: bold;
+  color: #007bff;
+}
+.dline {
+  line-height: 0.9em;
+}
+.dline::before {
+  content: ' \21C0';
+  color: black;
+  margin-right: 3px;
+}
+
 /* 
 -МЕДИА ЗАПРОСЫ-
 */
@@ -283,7 +331,6 @@ th {
     display: block;
     /* text-wrap: wrap; */
     /* overflow-wrap: break-word; */
-    
     overflow: auto;
   }
   
@@ -294,16 +341,47 @@ th {
     font-family: monospace;
     font-size: 12px;
   }
+  .header-logo img {
+    display: none;
+  }
 }
 
-@media (min-width: 1920px) {
+@media (max-width: 1917px) {
+  .sidebar {
+    display: none;
+  }
   .header-logo img {
-    padding-left: 200px;
+    display: none;
+  }
+}
+
+@media (max-width: 1920px) {
+  .header-logo img {
+    padding-left: 280px;
+  }
+
+  .sidebar {
+    width: 250px;
+    padding: 5px;
+    margin: 10px;
+    right: 112px;
+    position: fixed;
+    overflow-y: auto;
+    background-color: #f4f4f4;
+    border: 2px solid #bbb6b0ec;
+  }
+
+  .sidebar h2 {
+    font-size: 14px;
+  }
+  
+  .sidebar a {
+    font-size: 10px;
   }
 }
 
 @media (min-width: 2560px) {
   .header-logo img {
-    padding-left: 500px;
+    padding-left: 560px;
   }
 }
