--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 @import url('header.css');
 @import url('footer.css');
 @import url('variables.css');
+@import url('tabs_main_page.css');
 
 * {
   margin: 0;
@@ -15,16 +16,14 @@ body {
   font-family: 'Inter';
   margin: 0;
   padding: 0;
-  /* transition: all 1s ease; */
+  transition: all 1s ease;
+  height: 100vh;
 }
 
 
 
 
-h1, h3 {
-  background-color: rgba(220, 220, 220, 0.464);
-  /* background-color: gainsboro; */
-}
+
 
 
  
