--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-
 @import url('fonts.css');
 @import url('header.css');
 @import url('footer.css');
@@ -17,7 +16,7 @@ body {
   margin: 0;
   padding: 0;
   transition: all 1s ease;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 
