--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 @import url('footer.css');
 @import url('variables.css');
 @import url('tabs_main_page.css');
+@import url('center-block.css');
 
 * {
   margin: 0;
@@ -12,7 +13,10 @@
 
 body {
   background-color: var(--gray90);
-  font-family: 'Inter';
+  background-image: url(../assets/images/pattern.jpg);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
   margin: 0;
   padding: 0;
   transition: all 1s ease;
@@ -20,12 +24,6 @@ body {
 }
 
 
-
-
-
-
-
- 
 pre {
   background-color: #e1e1e1b3;
   padding: 10px;
