--- a/styles/tabs_main_page.css
+++ b/styles/tabs_main_page.css
@@ -6,6 +6,16 @@
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+
+
+  background-color: transparent;
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px); /*для ios*/
+  /* background-image: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0.3),
+    rgba(0, 0, 0, 0.2)
+  ); */
 }
 
 .tab-buttons {
@@ -108,4 +118,23 @@
   font-weight: normal;
   /* font-style: italic; */
   background: var(--gray70);
+}
+
+/* Кастомизация содержания tabs */
+.tab-content li {
+  padding: 5px 5px 5px 5px;
+  color: var(--gray70);
+}
+
+.tab-content li:hover {
+  box-shadow: 0 4px 16px 0 #0000004d;
+}
+
+.tab-content li a {
+  color: var(--gray30);
+  text-decoration-line: none;
+}
+
+.tab-content ul {
+  list-style-type: none;
 }
