--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
 @import url('variables.css');
 @import url('tabs_main_page.css');
 @import url('center-block.css');
+@import url('prism.css');
 
 * {
   margin: 0;
@@ -24,7 +25,7 @@ body {
 }
 
 
-pre {
+/* pre {
   background-color: #e1e1e1b3;
   padding: 10px;
   border-radius: 4px;
@@ -37,6 +38,28 @@ code {
   border-radius: 4px;
   font-family: monospace;
   font-size: 17px;
+} */
+ pre {
+  width: 100%;
+  text-align: left;
+  /* background-color: #e1e1e1b3; */
+  background-color: #e1e1e1b3;
+  padding: 10px;
+  border-radius: 4px;
+  overflow-x: auto;
+}
+
+code {
+  /* background-color: #e1e1e16d; */
+  background-color: #fff4da13;
+  padding: 1px 4px;
+  border-radius: 4px;
+  /* font-family: monospace; */
+  /* font-size: 17px; */
+  /* font-family: "DotGothic16", serif; */
+  /* font-weight: 400; */
+  /* font-style: normal; */
+  font-family: 'JetBrainsMono-Thin';
 }
 
 
@@ -46,9 +69,42 @@ img {
 }
 
 
+.result {
+  width: 100%;
+  border: 2px solid gainsboro;
+  
+}
 
+.resultP {
+  background-color: rgba(220, 220, 220, 0.462);
+  margin-top: 0;
+  border-bottom: 1px solid black;
+}
 
 /* 
 -МЕДИА ЗАПРОСЫ-
 */
 
+@media (max-width: 768px) {
+  /* h1 {
+    font-size: 45px;
+  } */
+
+  pre {
+    font-size: 12px;
+  }
+
+  img {
+    width: 100%;
+  }
+  /* ul{
+    margin-left: 15px; 
+  } */
+  /* ol {
+    margin-left: 15px; 
+  } */
+  /* li {
+    line-height: 20px;
+    padding: 0px;
+  } */
+}
