--- a/styles/style.css
+++ b/styles/style.css
@@ -5,11 +5,25 @@
 @import url('tabs_main_page.css');
 @import url('center-block.css');
 @import url('prism.css');
+@import url('menu-button-header-hide.css');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(150, 150, 150);
+  outline: 1px solid rgb(84, 93, 103);
 }
 
 body {
@@ -24,22 +38,7 @@ body {
   /* height: 100vh; */
 }
 
-
-/* pre {
-  background-color: #e1e1e1b3;
-  padding: 10px;
-  border-radius: 4px;
-  overflow-x: auto;
-}
-
-code {
-  background-color: #e1e1e16d;
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-family: monospace;
-  font-size: 17px;
-} */
- pre {
+pre {
   width: 100%;
   text-align: left;
   /* background-color: #e1e1e1b3; */
@@ -80,6 +79,8 @@ img {
   margin-top: 0;
   border-bottom: 1px solid black;
 }
+
+
 
 /* 
 -МЕДИА ЗАПРОСЫ-
