start styling article pages

--- a/styles/menu-button-header-hide.css
+++ b/styles/menu-button-header-hide.css
@@ -65,6 +65,7 @@ body.menu-open {
   }
 
   .close-menu {
+    color: var(--gray90);
     display: block;
     align-self: flex-end;
     background: none;
