--- a/styles/tabs_main_page.css
+++ b/styles/tabs_main_page.css
@@ -1,21 +1,14 @@
 .tabs {
   max-width: 1200px;
-  min-height: 20vh;
+  min-height: 50vh;
   margin: auto;
   background: white;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-
-
   background-color: transparent;
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px); /*для ios*/
-  /* background-image: linear-gradient(
-    120deg,
-    rgba(255, 255, 255, 0.3),
-    rgba(0, 0, 0, 0.2)
-  ); */
   font-family: 'Montserrat';
 }
 
@@ -81,9 +74,6 @@
   box-shadow: 0 2px 5px rgba(0,0,0,0.15);
 }
 
-/* .dropdown:hover .dropdown-menu {
-  display: block;
-} */
 .dropdown-menu {
   display: none;
   position: absolute;
@@ -130,6 +120,7 @@
 .tab-content li {
   padding: 5px 5px 5px 5px;
   color: var(--gray70);
+  font-size: 20px;
 }
 
 .tab-content li:hover {
@@ -143,4 +134,13 @@
 
 .tab-content ul {
   list-style-type: none;
+}
+
+@media (max-width: 768px) {
+  .tab-content h1, h2, h3, h4{
+    font-size: 18px;
+  }
+  .tab-content li {
+    font-size: 16px;
+  }
 }
