--- a/styles/center-block.css
+++ b/styles/center-block.css
@@ -10,6 +10,7 @@
 }
 
 .center-block-text {
+  color: var(--gray30);
   font-family: 'Rubik Doodle Shadow';
   font-size: 5em;
   text-align: center;
@@ -20,6 +21,7 @@
   font-size: 25px;
   text-align: center;
   font-family: 'Montserrat';
+  color: var(--gray10);
 }
 
 @media (max-width: 768px) {
