--- a/styles/style.css
+++ b/styles/style.css
@@ -27,27 +27,28 @@ body::-webkit-scrollbar-thumb {
 }
 
 body {
-  background-color: var(--gray90);
-  background-image: url(../assets/images/pattern.jpg);
+  background-image: var(--background-image);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   margin: 0;
   padding: 0;
-  transition: all 1s ease;
+  /* transition: all 1s ease; */
 }
 
 pre {
   width: 100%;
   text-align: left;
-  background-color: #e1e1e1b3;
+  /* background-color: #e1e1e1b3; */
+  /* background-color: var(--gray80); */
   padding: 10px;
   border-radius: 4px;
   overflow-x: auto;
 }
 
 code {
-  background-color: #fff4da13;
+  /* background-color: #fff4da13; */
+  background-color: var(--gray90);
   padding: 1px 4px;
   border-radius: 4px;
   font-family: 'JetBrainsMono-Thin';
@@ -68,6 +69,20 @@ img {
   background-color: rgba(220, 220, 220, 0.462);
   margin-top: 0;
   border-bottom: 1px solid black;
+}
+
+#scrollToTopButton {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  cursor: pointer;
+  background-color: var(--gray80);
+  color: var(--gray10);
+  border: none;
+  border-radius: 12px;
+  padding: 10px 10px;
+  display: none;
 }
 
 /* 
