--- a/styles/tabs_main_page.css
+++ b/styles/tabs_main_page.css
@@ -21,7 +21,8 @@
 .tab-button {
   flex: 1;
   padding: 12px 16px;
-  background: #eee;
+  background: var(--gray80);
+  color: var(--gray10);
   border: none;
   cursor: pointer;
   transition: background 0.2s;
@@ -30,12 +31,12 @@
 }
 
 .tab-button:hover {
-  background: #ddd;
+  background: var(--gray90);
 }
 
 .tab-button.active {
-  background: #fff;
-  border-bottom: 3px solid #007BFF;
+  background: var(--gray90);
+  border-bottom: 3px solid var(--bs-blue);
   font-weight: bold;
 }
 
@@ -96,15 +97,17 @@
   width: 100%;
   padding: 10px;
   border: none;
-  background: white;
+  /* background: white; */
   text-align: left;
   cursor: pointer;
   font-size: 14px;
   font-family: 'Montserrat';
+  background: var(--gray80);
+  color: var(--gray10);
 }
 
 .dropdown-item:hover {
-  background: #f2f2f2;
+  background: var(--gray70);
 }
 
 .dropdown-toggle {
