--- a/styles/style.css
+++ b/styles/style.css
@@ -37,17 +37,16 @@ body {
 }
 
 pre {
+  background-color: var(--gray90);
   width: 100%;
   text-align: left;
-  /* background-color: #e1e1e1b3; */
-  /* background-color: var(--gray80); */
   padding: 10px;
   border-radius: 4px;
   overflow-x: auto;
 }
 
 code {
-  /* background-color: #fff4da13; */
+  color: var(--gray10);
   background-color: var(--gray90);
   padding: 1px 4px;
   border-radius: 4px;
@@ -62,7 +61,6 @@ img {
 .result {
   width: 100%;
   border: 2px solid gainsboro;
-  
 }
 
 .resultP {
